--- a/Mendota_Pexternal_atmdep.Rmd
+++ b/Mendota_Pexternal_atmdep.Rmd
@@ -43,10 +43,10 @@ precip<- precip %>%
   mutate(Precipitation_in=as.numeric(Precipitation_in)) %>% #convert to numeric
   filter(!is.na(Precipitation_in)) #remove NAs
 precip <- precip %>%
-  mutate(dryP_atm_mgday = (P_atm_dry*A_lake_m2), #calculate dry P deposited
-         wetP_atm_mgday = P_atm_wet*(A_lake_m2*(Precipitation_in*in_m)*m3_L), 
+  mutate(dryP_atm_kgday = (P_atm_dry*A_lake_m2)/1000, #calculate dry P deposited
+         wetP_atm_kgday = P_atm_wet*(A_lake_m2*(Precipitation_in*in_m)*m3_L)/1000, 
          #calculate wet P deposited
-         totP_atm_mgday = dryP_atm_mgday+wetP_atm_mgday) #calculate total P atm
+         totP_atm_kgday = dryP_atm_kgday+wetP_atm_kgday) #calculate total P atm
 # deposited every day
 ```
 
@@ -54,7 +54,7 @@ precip <- precip %>%
 
 ```{r}
 ggplot(data=precip, #need to subset data because of big gap between 2000 and 2008
-       aes(x=sampledate, y=totP_atm_mgday/1000)) +
+       aes(x=sampledate, y=totP_atm_kgday)) +
   geom_point() +
   geom_line() + 
   theme_classic() +
@@ -71,13 +71,13 @@ date_range<- seq( #creates a vector of sequence data
   by="1 day") #observations every 14 days (bimonthly) 
 interpolated<- approx( #creates a vector of data that linearly interpolates 
   precip$sampledate, #across date
-  precip$totP_atm_mgday, #the predicted values of Hypo P: Epi P ratio
+  precip$totP_atm_kgday, #the predicted values of Hypo P: Epi P ratio
   xout=date_range) #for every 1 day
 totP_atm_interp <- data.frame( #creates a new data frame that has 
   SampleDate = as.Date(interpolated$x), #measurements every 14 days
-                             totP_atm_mgday=interpolated$y) #predicted hypo: epi P ratio
+                             totP_atm_kgday=interpolated$y) #predicted hypo: epi P ratio
 plot(totP_atm_interp,
      xlab="Date",
-     ylab="Total P deposited from atmosphere (mg/day)") #plots the new time series
+     ylab="Total P deposited from atmosphere (kg/day)") #plots the new time series
 write.csv(totP_atm_interp, file="Cleaned_data/Mendota_P_atm.csv")
 ```
