--- a/Mendota_P_water.Rmd
+++ b/Mendota_P_water.Rmd
@@ -24,7 +24,7 @@ Packages loaded.
 b) Loading the data...
 
 ```{r}
-data<- read.csv(file.choose(), header=TRUE) #choose "Original_data/ntl1_v9_1_chem.csv"
+data<- read.csv(file="Original_data/ntl1_v9_1_chem.csv", header=TRUE) #has nutrient data measured in lake
 ```
 
 # Step 2. Transform and filter data:
@@ -45,108 +45,151 @@ ME_P<- data %>%
 stem(ME_P$Depth_m) #plots the number of observations by depth (y-axis)
 ```
 
-b) Filtering epilimnion P data...
+b) Filter and transform epilimnion P data...
 ```{r}
 Epi_P<- ME_P %>%
   filter(Depth_m <= 1.5) %>% #for observations taken at or above 1.5 m
   group_by(sampledate) %>% #group all observations in same sample date
-  summarize(TotP_mgL=mean(TotP_mgL, na.rm=TRUE),
-            DisP_mgL=mean(DisP_mgL, na.rm=TRUE)) %>% #average the observations
-  mutate(Yr=as.integer(year(sampledate)), #adds field with year
-         MoYr=format(sampledate, "%m/01/%Y"), #adds field with month,year
-         daynum=as.integer(yday(sampledate)),
-         Mo=as.integer(month(sampledate))) #adds field with Julian date
+  summarize(TotP_mgL=mean(TotP_mgL, na.rm=TRUE)) #calculates mean for all depths in epi 
+
+date_range<- seq( #creates a vector of sequence data
+  min(Epi_P$sampledate), #starting at the first sample date
+  max(Epi_P$sampledate), #ending at the last sample date
+  by="1 day") #observations every day  
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  Epi_P$sampledate, #across date
+  Epi_P$TotP_mgL, #the predicted values of epi total P 
+  xout=date_range) #for every 1 day
+epiP_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 14 days
+                             TotP_mgL=interpolated$y) #predicted hypo: epi P ratio
+plot(epiP_interp,
+     xlab="Date",
+     ylab="Epi Total P (mg/L)") #plots the new time series
 ```
 
 Epi P data transformed and filtered.
 
-b) Transforming and filtering hypolimnion P data...
+c) Filter and transform hypolimnion P data...
 
 ```{r}
 Hypo_P<- ME_P %>%
   filter(Depth_m >= 20) %>% #for observations taken at or below 20 m
   group_by(sampledate) %>% #group all observations in same sample date
-  summarize(TotP_mgL=mean(TotP_mgL, na.rm=TRUE),
-            DisP_mgL=mean(DisP_mgL, na.rm=TRUE)) %>% #average the observations
-  mutate(Yr=as.integer(year(sampledate)), #adds field with year
-         MoYr=format(sampledate, "%m/01/%Y"), #adds field with month,year
-         daynum=as.integer(yday(sampledate)),
-         Mo=as.integer(month(sampledate))) #adds field with Julian date
+  summarize(TotP_mgL=mean(TotP_mgL, na.rm=TRUE)) #calculates mean for all depths in hypo
+
+date_range<- seq( #creates a vector of sequence data
+  min(Hypo_P$sampledate), #starting at the first sample date
+  max(Hypo_P$sampledate), #ending at the last sample date
+  by="1 day") #observations every day  
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  Hypo_P$sampledate, #across date
+  Hypo_P$TotP_mgL, #the predicted values of epi total P 
+  xout=date_range) #for every 1 day
+hypoP_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 14 days
+                             TotP_mgL=interpolated$y) #predicted hypo: epi P ratio
+plot(hypoP_interp,
+     xlab="Date",
+     ylab="Hypo Total P (mg/L)") #plots the new time series
+
 ```
 
 Hypo P data transformed and filtered.
 
+# Step 3. Combine epi and hypo data into single data file, calculate hypo: epi total P ratio:
 
-# Step 3. View and summarize the data:
+```{r}
+Me_P_water<- merge(epiP_interp, hypoP_interp, by="sampledate") #merge the epi and hypo P by sample date
+Me_P_water<- Me_P_water %>% #need to clean up 
+  mutate(Epi_TotP_mgL=TotP_mgL.x, #rename column
+         TotP_mgL.x=NULL, #remove duplicate column
+         Hypo_TotP_mgL=TotP_mgL.y,#rename column
+         TotP_mgL.y=NULL,#remove duplicate column
+         HE_ratio_TotP_mgL=Hypo_TotP_mgL/Epi_TotP_mgL, #calculate Hypo: Epi total P
+         Yr=as.integer(year(sampledate)), #adds field with year
+         MoYr=format(sampledate, "%m/01/%Y"), #adds field with month and year
+         daynum=as.integer(yday(sampledate)), #adds field with Julian date
+         Mo=as.integer(month(sampledate))) #adds field with month)
+```
+
+
+
+# Step 4. Summarize and view the data:
 
 a) Plotting epi P data...
+
 ```{r}
-ggplot(data=Epi_P, 
-       aes(x=daynum,y=TotP_mgL)) + 
+ggplot(data=Me_P_water, 
+       aes(x=daynum,y=Epi_TotP_mgL)) + 
   geom_point(aes(col=Yr))+
   labs(title="Epilimnion (>= 1.5 m), Lake Mendota, WI", #plot title
        x="Day of Year", #x axis label
        y="Total Phosphorus (mg/L)", #y axis label
        caption="Grey shading indicates CyanoHAB season, mid-Jul to mid-Sep.") + 
-  ylim(0, max(Epi_P$TotP_mgL)) +
-  scale_x_continuous(breaks = seq(0, max(Epi_P$daynum), #places axis tick marks
+  ylim(0, max(Me_P_water$Epi_TotP_mgL)) +
+  scale_x_continuous(breaks = seq(0, max(Me_P_water$daynum), #places axis tick marks
                                   by=30)) + #every 30 days (1 month) - CHANGE AS
   # NEEDED
   theme_classic()+
   scale_color_continuous(name="Year")+
   geom_smooth() + #adds loess curve (moving average regression model)
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=195, xmax=255, ymin=0, ymax=Inf) #shadow box highlights CyanoHAB season
+           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
 ```
 
-Measurements plotted by Julian day to show frequency of sampling.
+Epi data plotted.
 
 b) Plotting hypo P data...
+
 ```{r}
-ggplot(data=Hypo_P, 
-       aes(x=daynum,y=TotP_mgL)) + 
+ggplot(data=Me_P_water, 
+       aes(x=daynum,y=Hypo_TotP_mgL)) + 
   geom_point(aes(col=Yr))+
   labs(title="Hypolimnion (>= 20 m), Lake Mendota, WI", #plot title
        x="Day of Year", #x axis label
        y="TOtal Phosphorus (mg/L)", #y axis label
        caption="Grey shading indicates CyanoHAB season, mid-Jul to mid-Sep.") + 
-  ylim(0, max(Hypo_P$TotP_mgL)) +
-  scale_x_continuous(breaks = seq(0, max(Hypo_P$daynum), #places axis tick marks
+  ylim(0, max(Me_P_water$Hypo_TotP_mgL)) +
+  scale_x_continuous(breaks = seq(0, max(Me_P_water$daynum), #places axis tick marks
                                   by=30)) + #every 30 days (1 month) - CHANGE AS
   # NEEDED
   theme_classic()+
   scale_color_continuous(name="Year")+
   geom_smooth() + #adds loess curve (moving average regression model)
   annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=195, xmax=255, ymin=0, ymax=Inf) #shadow box highlights CyanoHAB season
+           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
 ```
 
-# Step 4. Combine data into single data file:
+c) Plotting hypo: epi total P...
 
 ```{r}
-Me_P_water<- merge(Epi_P, Hypo_P, by="sampledate") #merge the epi and hypo P by sample date
-Me_P_water<- Me_P_water %>% #need to clean up 
-  mutate(Epi_TotP_mgL=TotP_mgL.x, #rename column
-         TotP_mgL.x=NULL, #remove duplicate column
-         Epi_DisP_mgL=DisP_mgL.x,#rename column
-         DisP_mgL.x=NULL,#remove duplicate column
-         Hypo_TotP_mgL=TotP_mgL.y,#rename column
-         TotP_mgL.y=NULL,#remove duplicate column
-         Hypo_DisP_mgL=DisP_mgL.y,#rename column
-         DisP_mgL.y=NULL,#remove duplicate column
-         Yr=Yr.x,#rename column
-         Yr.x=NULL,#remove duplicate column
-         Yr.y=NULL,#remove duplicate column
-         daynum=daynum.x,#rename column
-         daynum.x=NULL,#remove duplicate column
-         daynum.y=NULL,#remove duplicate column
-         MoYr=MoYr.x,#rename column
-         MoYr.x=NULL,#remove duplicate column
-         MoYr.y=NULL,#remove duplicate column
-         Mo=Mo.x,#rename column
-         Mo.x=NULL,#remove duplicate column
-         Mo.y=NULL,
-         HE_ratio_TotP_mgL=Hypo_TotP_mgL/Epi_TotP_mgL, #calculate Hypo: Epi total P
-         HE_ratio_DisP_mgL=Hypo_DisP_mgL/Epi_DisP_mgL)#calculate Hypo: Epi dissolved P 
+ggplot(data=Me_P_water, 
+       aes(x=daynum,y=HE_ratio_TotP_mgL)) + 
+  geom_point(aes(col=Yr))+
+  labs(title="Hypo: Epi total P ratio, Lake Mendota, WI", #plot title
+       x="Day of Year", #x axis label
+       y="Hypo: Epi Total Phosphorus", #y axis label
+       caption="Grey shading indicates CyanoHAB season, mid-Jul to mid-Sep.") + 
+  ylim(0, max(Me_P_water$HE_ratio_TotP_mgL)) +
+  scale_x_continuous(breaks = seq(0, max(Me_P_water$daynum), #places axis tick marks
+                                  by=30)) + #every 30 days (1 month) - CHANGE AS
+  # NEEDED
+  theme_classic()+
+  scale_color_continuous(name="Year")+
+  geom_smooth() + #adds loess curve (moving average regression model)
+  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
+  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
+           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+```
+
+# Step 5. Save the new data file:
+
+```{r}
 write.csv(Me_P_water, file="Cleaned_data/Mendota_P_water.csv")
 ```
