updated format for date from %d to %j and recalculated seasonal average P atm deposition

--- a/Mendota_Pexternal_atmdep.Rmd
+++ b/Mendota_Pexternal_atmdep.Rmd
@@ -61,7 +61,7 @@ precip <- precip %>%
 
 ```{R}
 precip_sum <- precip %>%
-  mutate(daynum=format(sampledate, format = "%d"))
+  mutate(daynum=format(sampledate, format = "%j"))
 precip_avg <-precip_sum %>%
   filter(daynum >=195 & daynum <= 255)
 ```
