Fixed conversion factor and updated calculations for atm deposit

--- a/Mendota_Pexternal_atmdep.Rmd
+++ b/Mendota_Pexternal_atmdep.Rmd
@@ -40,7 +40,7 @@ c) filter and mutate data as needed...
 ```{r}
 km2_m2= 1000000/1 #conversion factor from km^2 to m^2
 A_lake_m2 = 39.40*km2_m2 #surface area of lake in m^2 
-mg_kg = 1/1000 #conversion factor from mg to kg
+mg_kg = 1/1000000 #conversion factor from mg to kg
 
 in_m = 1/39.3701 #conversion factor from in to m (1 m = 39.701 inches)
 m3_L = 1000/1 #conversion factor from m^3 to L (1000 L = 1 m^3)
@@ -50,14 +50,14 @@ P_atm_wet = 0.032 #mg/L rate of P wet deposition
 
 precip <- precip %>%
   mutate(dryP_atm_kgday = ((P_atm_dry*A_lake_m2)*mg_kg), #calculate dry P deposited
-         wetP_atm_kgday = ((P_atm_wet*((Precipitation_in*in_m*A_lake_m2)*m3_L))*mg_kg), 
+         wetP_atm_kgday = (P_atm_wet*m3_L*(Precipitation_in*in_m*A_lake_m2)*mg_kg), 
          #calculate wet P deposited
          totP_atm_kgday = (dryP_atm_kgday+wetP_atm_kgday) #calculate total P atm
 # deposited every day
         ) 
 ```
 
-# Step 2. Summarize adn view the data:
+# Step 2. Summarize and view the data:
 
 ```{R}
 precip_sum <- precip %>%
@@ -65,8 +65,9 @@ precip_sum <- precip %>%
 precip_avg <-precip_sum %>%
   filter(daynum >=195 & daynum <= 255)
 ```
+
 The total external P loading from atmospheric deposition, during CyanoHAB season,
-was on average `r mean(precip_avg$totP_atm_kgday, na.rm=TRUE)` kg/day.
+was on average `r mean(precip_avg$totP_atm_kgday, na.rm=TRUE)` +- `r (sd(precip_avg$totP_atm_kgday, na.rm=TRUE))/sqrt(length(precip_avg$totP_atm_kgday))` kg/day.
 
 ```{r}
 ggplot(data=precip, #need to subset data because of big gap between 2000 and 2008
